Make temp file names unique (#26)
Change VaultSecretFileDescriptor so it generates a (almost certainly)
unique file name. I could have used Files.createTempFile but chose
not to simply because I want to create and write the file at the same
time. Concatenating the variable name plus a random int plus a random
long ought to provide a decent enough amount of entropy.

Fixes #25